# payment-processor-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: rust.yml
benches/: bench_main.rs  util.rs
benches/benchmarks/: mod.rs  parsing.rs  processing.rs
benches/data/: activities_10K.csv  transactions-1K.csv
docs/bench-reports/decimals/: README.md
docs/bench-reports/decimals/CsvReader__iter/1000/base/: estimates.json  tukey.json
docs/bench-reports/decimals/CsvReader__iter/1000/change/: estimates.json
docs/bench-reports/decimals/CsvReader__iter/1000/new/: benchmark.json  sample.json
docs/bench-reports/decimals/CsvReader__iter/1000/report/: index.html
docs/bench-reports/decimals/CsvReader__iter/10000/base/: benchmark.json  estimates.json
docs/bench-reports/decimals/CsvReader__iter/10000/change/: estimates.json
docs/bench-reports/decimals/CsvReader__iter/10000/new/: sample.json  tukey.json
docs/bench-reports/decimals/CsvReader__iter/10000/report/: index.html
docs/bench-reports/decimals/CsvReader__iter/report/: index.html
docs/bench-reports/decimals/process_activities [dispute process]/base/: tukey.json
docs/bench-reports/decimals/process_activities [dispute process]/change/: estimates.json
docs/bench-reports/decimals/process_activities [dispute process]/new/: benchmark.json  estimates.json  sample.json
docs/bench-reports/decimals/process_activities [dispute process]/report/: index.html
docs/bench-reports/decimals/report/: index.html
src/: account.rs  account_activity.rs  dispute.rs  lib.rs  main.rs  processor.rs  transaction.rs
src/processors/: mod.rs
src/processors/csv/: deserialize.rs  mod.rs  processor.rs  reader.rs  writer.rs
